--- a/index.html
+++ b/index.html
@@ -13,51 +13,38 @@ body {
     font-family: Arial, sans-serif;
 }
 
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    border-bottom: 2px solid #facc15;
-}
-
-header h1 {
-    color: #facc15;
-    font-size: 22px;
-    margin: 0;
-}
-
-.menu-btn {
-    background: #facc15;
-    color: #000;
-    padding: 10px 18px;
-    border-radius: 8px;
-    border: none;
-    font-weight: bold;
-}
-
 .container {
     max-width: 650px;
     margin: auto;
     padding: 15px;
+    border: 2px solid #facc15;
+    border-radius: 14px;
+    background: #050505;
+}
+
+h1 {
+    text-align: center;
+    color: #facc15;
+    font-size: 32px;
+    margin-bottom: 20px;
 }
 
 .section {
     border: 1px solid #facc15;
     border-radius: 10px;
-    padding: 14px;
-    margin-bottom: 18px;
+    padding: 12px;
+    margin-bottom: 16px;
     background: #0b0b0b;
 }
 
 .section-title {
     color: #facc15;
     font-size: 20px;
-    margin-bottom: 12px;
     font-weight: bold;
+    margin-bottom: 10px;
 }
 
-input {
+input, select {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
@@ -65,113 +52,148 @@ input {
     border: 1px solid #facc15;
     border-radius: 6px;
     color: #fff;
+    font-size: 15px;
 }
 
 button {
     width: 100%;
     padding: 14px;
-    margin-top: 8px;
     border: none;
     border-radius: 8px;
     font-size: 16px;
     font-weight: bold;
+    cursor: pointer;
+    margin-top: 10px;
 }
 
 .btn-yellow { background: #facc15; color: #000; }
-.btn-blue { background: #2563eb; color: #fff; }
+.btn-green { background: #22c55e; color: #000; }
 
 .total {
     text-align: center;
-    font-size: 26px;
+    font-size: 28px;
+    font-weight: bold;
     color: #facc15;
-    margin-top: 12px;
+    margin-top: 15px;
 }
-
-.hidden { display: none; }
 </style>
 </head>
 
 <body>
 
-<header>
-    <h1>Construction Estimator</h1>
-    <button class="menu-btn" onclick="showPage('menu')">Menu</button>
-</header>
-
 <div class="container">
 
-<!-- MENU -->
-<div id="menu">
-    <div class="section">
-        <div class="section-title">Select Estimator</div>
-        <button class="btn-blue" onclick="showPage('septic')">Septic Estimator</button>
-        <button class="btn-blue" onclick="showPage('pad')">Building Pad</button>
-    </div>
+<h1>SEPTIC SYSTEM ESTIMATOR</h1>
+
+<div class="section">
+    <div class="section-title">Job Info</div>
+    <input id="customerName" placeholder="Customer Name">
+    <input id="jobLocation" placeholder="Job Location">
 </div>
 
-<!-- SEPTIC PAGE (RESTORED LAYOUT) -->
-<div id="septic" class="hidden">
-    <div class="section">
-        <div class="section-title">Septic System</div>
-
-        <input id="tankCost" type="number" placeholder="Tank Cost ($)">
-        <input id="fieldLength" type="number" placeholder="Field Line Length (ft)">
-        <input id="pipeCost" type="number" placeholder="Pipe Cost per ft ($)">
-
-        <input id="rockTons" type="number" placeholder="Gravel / Rock Tons">
-        <input id="rockCost" type="number" value="17" placeholder="Cost per Ton ($)">
-
-        <input id="laborCost" type="number" placeholder="Labor / Site Work ($)">
-        <input id="markup" type="number" value="20" placeholder="Markup %">
-
-        <button class="btn-yellow" onclick="calculateSeptic()">Calculate Total</button>
-        <div class="total" id="septicTotal">$0.00</div>
-    </div>
+<div class="section">
+    <div class="section-title">System Type</div>
+    <select id="systemType">
+        <option value="conventional">Conventional Septic</option>
+        <option value="chamber">Chamber Septic</option>
+    </select>
 </div>
 
-<!-- PAD PAGE -->
-<div id="pad" class="hidden">
-    <div class="section">
-        <div class="section-title">Building Pad</div>
-
-        <input id="padLength" type="number" placeholder="Pad Length (ft)">
-        <input id="padWidth" type="number" placeholder="Pad Width (ft)">
-        <input id="padDepth" type="number" placeholder="Fill Depth (ft)">
-        <input id="padCost" type="number" placeholder="Cost per Cubic Yard ($)">
-        <input id="padLabor" type="number" placeholder="Labor Cost ($)">
-
-        <button class="btn-yellow" onclick="calculatePad()">Calculate Pad</button>
-        <div class="total" id="padTotal">$0.00</div>
-    </div>
+<div class="section">
+    <div class="section-title">System Details</div>
+    <input id="tankCost" type="number" placeholder="Tank Cost ($)">
+    <input id="fieldLength" type="number" placeholder="Field Line Length (ft)">
+    <input id="pipeCost" type="number" placeholder="Pipe Cost per ft ($)">
 </div>
+
+<div class="section">
+    <div class="section-title">Rock (Hauled In)</div>
+    <input id="rockTons" type="number" placeholder="Rock Tons">
+    <input id="rockCost" type="number" value="17" placeholder="Cost per Ton ($)">
+</div>
+
+<div class="section">
+    <div class="section-title">Hauling</div>
+    <input id="haulDistance" type="number" placeholder="Miles One Way">
+    <input id="haulRate" type="number" placeholder="Haul Cost (cents per mile)">
+</div>
+
+<div class="section">
+    <div class="section-title">Tree Clearing (if needed)</div>
+    <input id="treeCount" type="number" placeholder="Tree Count">
+    <select id="treeSize">
+        <option value="0">Select Tree Size</option>
+        <option value="500">Small</option>
+        <option value="1000">Medium</option>
+        <option value="1500">Large</option>
+    </select>
+</div>
+
+<div class="section">
+    <div class="section-title">Labor / Site Work</div>
+    <input id="laborBase" type="number" placeholder="Base Labor Cost ($)">
+    <input id="markupPercent" type="number" placeholder="Markup %">
+</div>
+
+<button class="btn-yellow" onclick="calculateTotal()">CALCULATE TOTAL</button>
+<button class="btn-green" onclick="generateQuote()">GENERATE CUSTOMER QUOTE</button>
+
+<div class="total" id="totalOutput">$0.00</div>
 
 </div>
 
 <script>
-function showPage(page) {
-    document.getElementById('menu').classList.add('hidden');
-    document.getElementById('septic').classList.add('hidden');
-    document.getElementById('pad').classList.add('hidden');
-    document.getElementById(page).classList.remove('hidden');
-}
-
-function num(id) {
+function val(id) {
     return parseFloat(document.getElementById(id).value) || 0;
 }
 
-function calculateSeptic() {
-    const pipeTotal = num('fieldLength') * num('pipeCost');
-    const rockTotal = num('rockTons') * num('rockCost');
-    const subtotal = num('tankCost') + pipeTotal + rockTotal + num('laborCost');
-    const total = subtotal + (subtotal * num('markup') / 100);
-    document.getElementById('septicTotal').innerText = '$' + total.toFixed(2);
+function calculateTotal() {
+
+    let tank = val("tankCost");
+    let field = val("fieldLength");
+    let pipe = val("pipeCost");
+    let rockTons = val("rockTons");
+    let rockCost = val("rockCost");
+    let haulMiles = val("haulDistance");
+    let haulRate = val("haulRate");
+    let trees = val("treeCount");
+    let treeSize = val("treeSize");
+    let labor = val("laborBase");
+    let markup = val("markupPercent");
+
+    let systemType = document.getElementById("systemType").value;
+
+    let pipeTotal = field * pipe;
+    let rockTotal = rockTons * rockCost;
+    let haulTotal = (haulMiles * 2) * (haulRate / 100);
+    let treeTotal = trees * treeSize;
+
+    // Chamber adjustments
+    if (systemType === "chamber") {
+        rockTotal = 0;
+        labor = labor * 0.85; // 15% labor reduction
+    }
+
+    let subtotal = tank + pipeTotal + rockTotal + haulTotal + treeTotal + labor;
+    let total = subtotal + (subtotal * (markup / 100));
+
+    document.getElementById("totalOutput").innerText = "$" + total.toFixed(2);
 }
 
-function calculatePad() {
-    const cubicFeet = num('padLength') * num('padWidth') * num('padDepth');
-    const cubicYards = cubicFeet / 27;
-    const total = (cubicYards * num('padCost')) + num('padLabor');
-    document.getElementById('padTotal').innerText = '$' + total.toFixed(2);
+function generateQuote() {
+    calculateTotal();
+
+    let total = parseFloat(document.getElementById("totalOutput").innerText.replace("$",""));
+    let deposit = total >= 10000 ? total * 0.15 : 0;
+
+    let win = window.open("", "_blank");
+    win.document.write(`
+        <h1>Crestview Construction LLC</h1>
+        <p><strong>Total:</strong> $${total.toFixed(2)}</p>
+        <p><strong>Deposit:</strong> $${deposit.toFixed(2)}</p>
+        <p>${total >= 10000 ? "Progress payments apply." : "Payment due upon completion."}</p>
+        <script>window.print();</script>
+    `);
 }
 </script>
 
